# arduino-mirror-tool

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  mirror.yml
src/arduino_mirror/: __main__.py  cli.py  core.py  sync.py
tests/: test_gen_index.py  test_sync.py  test_sync_local.py
tests/fixtures/: package_index.json
